--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="form-container">
+<div class="login-container">
 	<span class="nobetween-info"> Coordinate with your course administrator for the correct Course/Club Code
 	</span>
 	<form [formGroup]="formGroup" class="flex-container" autocomplete="off">
