--- a/src/app/auth/reset/reset.component.html
+++ b/src/app/auth/reset/reset.component.html
@@ -1,4 +1,4 @@
-<div class="form-container">
+<div class="login-container">
     <form [formGroup]="formGroup" class="flex-container" autocomplete="off">
         <mat-form-field appearance="standard">
             <mat-label>EMAIL</mat-label>
