--- a/src/app/dashboard/account-management/account-management.component.html
+++ b/src/app/dashboard/account-management/account-management.component.html
@@ -3,37 +3,25 @@
         <span class="dashboard-text"> {{ accountStatusTxt }}
         </span>
     </div>
-    <form [formGroup]="formGroup" autocomplete="off">
+    <form [formGroup]="formGroup" autocomplete="off" *ngIf="!showGrid">
         <div class="flex-container">
-            <mat-form-field appearance="standard" *ngIf="showGrid">
-                <mat-label>FILTER: {{ activeFilter }} </mat-label>
-                <mat-select formControlName="Filter">
-                    <mat-option *ngFor="let filter of vmFilters" [value]="filter.value">
-                        {{ filter.label }}</mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="standard" *ngIf="!showGrid">
+            <mat-form-field appearance="standard">
                 <mat-label>FIRST NAME</mat-label>
                 <input matInput formControlName="FirstName" placeholder="FIRST NAME" required>
             </mat-form-field>
-            <mat-form-field appearance="standard" *ngIf="!showGrid">
+            <mat-form-field appearance="standard">
                 <mat-label>LAST NAME</mat-label>
                 <input matInput formControlName="LastName" placeholder="LAST NAME" required>
             </mat-form-field>
-            <mat-form-field appearance="standard" *ngIf="!showGrid">
+            <mat-form-field appearance="standard">
                 <mat-label>PHONE NUMBER</mat-label>
                 <input matInput formControlName="PhoneNumber" placeholder="PHONE NUMBER" type="tel">
             </mat-form-field>
-            <mat-form-field appearance="standard" *ngIf="!showGrid">
+            <mat-form-field appearance="standard">
                 <mat-label>EMAIL</mat-label>
                 <input matInput formControlName="Email" placeholder="EMAIL" type="email" required>
             </mat-form-field>
-            <!--             <mat-form-field appearance="standard" *ngIf="!showGrid">
-                <mat-label>ACCESS LEVEL</mat-label>
-                <input matInput formControlName="AccessLevel" placeholder="AccessLevel" readonly>
-            </mat-form-field> -->
-
-            <mat-form-field appearance="standard" *ngIf="!showGrid">
+            <mat-form-field appearance="standard">
                 <mat-label>ACCESS LEVEL</mat-label>
                 <mat-select formControlName="AccessLevel">
                     <mat-option *ngFor="let level of vmAcess" [value]="level.value">
@@ -42,19 +30,19 @@
             </mat-form-field>
 
             <button type="button" mat-flat-button class="mat-flat-button" (click)="onAction_Click('save')"
-                *ngIf="!showGrid" [disabled]="formGroup.invalid"> {{
+                [disabled]="formGroup.invalid"> {{
                 accountStatusBtn }}
             </button>
 
             <button type="button" mat-flat-button class="mat-flat-button" (click)="onAction_Click('disable')"
-                *ngIf="!showGrid && accountEnabled"> DISABLE ACCOUNT
+                *ngIf="accountEnabled"> DISABLE ACCOUNT
             </button>
 
             <button type="button" mat-flat-button class="mat-flat-button" (click)="onAction_Click('enable')"
-                *ngIf="!showGrid && !accountEnabled"> ENABLE ACCOUNT
+                *ngIf="!accountEnabled"> ENABLE ACCOUNT
             </button>
 
-            <button type="button" mat-flat-button class="mat-flat-button" (click)="onBack_Click()" *ngIf="!showGrid">
+            <button type="button" mat-flat-button class="mat-flat-button" (click)="onBack_Click()">
                 BACK TO GRID
             </button>
         </div>
@@ -63,7 +51,17 @@
     <table mat-table [dataSource]="dataSource" *ngIf="showGrid">
 
         <ng-container matColumnDef="statuslink">
-            <th mat-header-cell *matHeaderCellDef> </th>
+            <th mat-header-cell *matHeaderCellDef>
+                <form [formGroup]="formGroup" autocomplete="off">
+                    <mat-form-field appearance="standard" *ngIf="showGrid">
+                        <mat-label>FILTER: {{ activeFilter }} </mat-label>
+                        <mat-select formControlName="Filter">
+                            <mat-option *ngFor="let filter of vmFilters" [value]="filter.value">
+                                {{ filter.label }}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </form>
+            </th>
             <td mat-cell *matCellDef="let element">
                 <span class="table-link" (click)="onStatus_Click(element)"> {{element.statuslink}} </span>
             </td>
