--- a/src/app/dashboard/couse-club-layout/courses/courses.component.html
+++ b/src/app/dashboard/couse-club-layout/courses/courses.component.html
@@ -18,7 +18,6 @@
             <button type="button" mat-flat-button class="mat-flat-button" (click)="onBack_Click()">
                 BACK TO GRID
             </button>
-
         </div>
     </form>
 
@@ -26,7 +25,9 @@
     <table mat-table [dataSource]="dataSource" *ngIf="showGrid">
 
         <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef> </th>
+            <th mat-header-cell *matHeaderCellDef>
+                <span class="table-link" (click)="onAdd_Click()"> ADD COURSE </span>
+            </th>
             <td mat-cell *matCellDef="let element">
                 <span class="table-link" (click)="onDelete_Click(element)"> DELETE </span>
                 <span class="table-link" (click)="onEdit_Click(element)"> EDIT </span>
@@ -46,9 +47,5 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-
-    <button type="button" mat-flat-button class="mat-flat-button" *ngIf="showGrid" (click)="onAdd_Click()">
-        Add Course
-    </button>
 
 </div>
