--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
-@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 @import '~@angular/material/theming';
 @include mat-core();
-
 $nobetween-app-primary: mat-palette($mat-green, A400);
 $nobetween-app-accent: mat-palette($mat-pink, A200, A100, A400);
 $nobetween-app-theme: mat-light-theme($nobetween-app-primary, $nobetween-app-accent);
-
 @include angular-material-theme($nobetween-app-theme);
+
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import './assets/mat-override.scss';
 
 
 html,
@@ -21,225 +21,6 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-.mat-button {
-    width: 200px;
-    color: #c1c1c1;
-
-    :hover {
-        color: #FFFFFF;
-    }
-}
-
-.mat-flat-button {
-    width: 200px;
-    background-color: #272f3c;
-    color: #c1c1c1;
-
-    :hover {
-        color: #FFFFFF;
-    }
-}
-
-.mat-flat-button:disabled {
-    pointer-events: none;
-    background-color: rgba(0, 0, 0, 0.12);
-}
-
-.mat-flat-button:hover {
-    color: #FFFFFF;
-}
-
-.mat-form-field {
-    width: 200px;
-    font-size: 12px;
-    color: #FFFFFF;
-
-    input::placeholder {
-        color: #c1c1c1;
-    }
-
-    .mat-input-element {
-        color: #c1c1c1;
-    }
-
-    .mat-form-field-label {
-        color: #c1c1c1;
-    }
-
-    .mat-form-field-underline {
-        background-color: #c1c1c1;
-    }
-
-    .mat-form-field-ripple {
-        background-color: #c1c1c1;
-    }
-
-    .mat-form-field-required-marker {
-        color: #c1c1c1;
-    }
-
-    .mat-select-value-text {
-        color: white;
-    }
-}
-
-.mat-form-field.mat-focused {
-    .mat-form-field-label {
-        color: #FFFFFF;
-    }
-
-    .mat-form-field-ripple {
-        background-color: #FFFFFF;
-        ;
-    }
-
-    .mat-form-field-required-marker {
-        color: #FFFFFF;
-        ;
-    }
-
-    .mat-input-element {
-        color: #FFFFFF;
-    }
-}
-
-
-.mat-form-field:hover {
-    .mat-form-field-label {
-        color: #FFFFFF;
-    }
-
-    .mat-form-field-ripple {
-        background-color: #FFFFFF;
-    }
-
-    .mat-form-field-required-marker {
-        color: #FFFFFF;
-    }
-
-    .mat-input-element {
-        color: #FFFFFF;
-    }
-}
-
-.mat-select-arrow {
-    color: #c1c1c1;
-}
-
-mat-icon {
-    color: #c1c1c1;
-}
-
-.mat-table {
-    width: 95%;
-    border: 1px solid #31538f;
-    margin: 0 auto;
-
-    .mat-form-field {
-        padding-left: 4px;
-        margin-left: 4px;
-
-        .mat-select-arrow {
-            color: #bf9014c4;
-        }
-
-        .mat-form-field-label {
-            color: #bf9014c4;
-        }
-
-        input::placeholder {
-            color: #bf9014c4;
-        }
-
-        .mat-input-element {
-            color: #bf9014c4;
-        }
-
-        .mat-form-field-label {
-            color: #bf9014c4;
-        }
-
-        .mat-form-field-underline {
-            background-color: #bf9014c4;
-        }
-
-        .mat-form-field-ripple {
-            background-color: #bf9014c4;
-        }
-
-        .mat-form-field-required-marker {
-            color: #bf9014c4;
-        }
-
-        .mat-select-value-text {
-            color: #bf9014c4;
-        }
-    }
-
-    .mat-form-field:hover {
-        .mat-select-arrow {
-            color: #bf9014;
-        }
-
-        .mat-form-field-label {
-            color: #bf9014;
-        }
-
-        input::placeholder {
-            color: #bf9014;
-        }
-
-        .mat-input-element {
-            color: #bf9014;
-        }
-
-        .mat-form-field-label {
-            color: #bf9014;
-        }
-
-        .mat-form-field-underline {
-            background-color: #bf9014;
-        }
-
-        .mat-form-field-ripple {
-            background-color: #bf9014;
-        }
-
-        .mat-form-field-required-marker {
-            color: #bf9014;
-        }
-
-        .mat-select-value-text {
-            color: #bf9014;
-        }
-    }
-}
-
-.mat-header-cell {
-    background-color: #272f3c !important;
-    color: #FFF;
-    border-left: 1px solid #c1c1c117 !important;
-    border-bottom: 1px solid #31538f !important;
-    padding-left: 8px !important;
-    font-size: 14px;
-}
-
-.mat-row:nth-child(2n+1) {
-    background-color: #262626 !important;
-}
-
-.mat-row:not(:nth-child(4n+1)) {
-    background-color: #272f3c !important;
-}
-
-.mat-cell {
-    color: #c1c1c1 !important;
-    border-left: 1px solid #c1c1c117;
-    padding-left: 8px !important;
-}
-
-
-
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
@@ -247,7 +28,6 @@ input:-webkit-autofill:active {
     transition: background-color 5000s;
     -webkit-text-fill-color: #fff !important;
 }
-
 
 // sets text color of primary buttons
 .mat-flat-button.mat-primary,
