--- a/src/app/dashboard/profile/course-change/course-change.component.html
+++ b/src/app/dashboard/profile/course-change/course-change.component.html
@@ -8,12 +8,12 @@
             </mat-select>
         </mat-form-field>
 
-        <button type="button" mat-flat-button (click)="onUpdate_Click()">
+        <button type="button" mat-flat-button color="primary" (click)="onUpdate_Click()">
             UPDATE
         </button>
     </div>
-    <div class="dashboard-text-container">
-        <span class="dashboard-text"> ADD COURSE/CLUB
+    <div class="dashboard-container">
+        <span class="dashboard-container-title"> ADD COURSE/CLUB
         </span>
     </div>
     <div class="flex-container">
@@ -30,7 +30,7 @@
             </mat-select>
         </mat-form-field>
 
-        <button type="button" mat-flat-button (click)="onAdd_Click()">
+        <button type="button" mat-flat-button color="primary" (click)="onAdd_Click()">
             ADD
         </button>
     </div>
