--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-.login-container {
+.auth-container {
     width: 100%;
     height: 100%;
     display: flex;
@@ -36,16 +36,4 @@
 
 .nobetween-info {
     color: #c1c1c1;
-}
-
-.table-link {
-    color: #bf9014c4;
-    padding-left: 4px;
-    margin-left: 4px;
-}
-
-.table-link:hover {
-    color: #bf9014;
-    text-decoration: underline;
-    cursor: pointer;
 }
