--- a/src/app/auth/reset/reset.component.html
+++ b/src/app/auth/reset/reset.component.html
@@ -1,13 +1,14 @@
-<div class="login-container">
+<div class="auth-container">
     <form [formGroup]="formGroup" class="flex-container" autocomplete="off">
         <mat-form-field appearance="standard">
             <mat-label>EMAIL</mat-label>
             <input matInput formControlName="Email" placeholder="EMAIL" type="email" required>
         </mat-form-field>
-        <button type="button" mat-flat-button (click)="onResetPassword_Click()" [disabled]="formGroup.invalid"> RESET
+        <button type="button" mat-flat-button color="primary" (click)="onResetPassword_Click()"
+            [disabled]="formGroup.invalid"> RESET
             PASSWORD
         </button>
-        <button type="button" mat-flat-button (click)="onBack_Click()">
+        <button type="button" mat-flat-button color="warn" (click)="onBack_Click()">
             GO BACK
         </button>
     </form>
