--- a/src/app/dashboard/account-management/account-management.component.html
+++ b/src/app/dashboard/account-management/account-management.component.html
@@ -1,6 +1,6 @@
 <div class="form-container">
-    <div class="dashboard-text-container" *ngIf="!showGrid">
-        <span class="dashboard-text"> {{ accountStatusTxt }}
+    <div class="dashboard-container" *ngIf="!showGrid">
+        <span class="dashboard-container-title"> {{ accountStatusTxt }}
         </span>
     </div>
     <form [formGroup]="formGroup" autocomplete="off" *ngIf="!showGrid">
@@ -29,20 +29,20 @@
                 </mat-select>
             </mat-form-field>
 
-            <button type="button" mat-flat-button class="mat-flat-button" (click)="onAction_Click('save')"
+            <button type="button" mat-flat-button color="primary" (click)="onAction_Click('save')"
                 [disabled]="formGroup.invalid"> {{
                 accountStatusBtn }}
             </button>
 
-            <button type="button" mat-flat-button class="mat-flat-button" (click)="onAction_Click('disable')"
+            <button type="button" mat-flat-button color="warn" (click)="onAction_Click('disable')"
                 *ngIf="accountEnabled"> DISABLE ACCOUNT
             </button>
 
-            <button type="button" mat-flat-button class="mat-flat-button" (click)="onAction_Click('enable')"
+            <button type="button" mat-flat-button color="primary" (click)="onAction_Click('enable')"
                 *ngIf="!accountEnabled"> ENABLE ACCOUNT
             </button>
 
-            <button type="button" mat-flat-button class="mat-flat-button" (click)="onBack_Click()">
+            <button type="button" mat-flat-button color="warn" (click)="onBack_Click()">
                 BACK TO GRID
             </button>
         </div>
@@ -63,7 +63,8 @@
                 </form>
             </th>
             <td mat-cell *matCellDef="let element">
-                <span class="table-link" (click)="onStatus_Click(element)"> {{element.statuslink}} </span>
+                <button type="button" mat-button color="accent" (click)="onStatus_Click(element)">
+                    {{element.statuslink}} </button>
             </td>
         </ng-container>
 
