styling/theming updates

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -12,10 +12,10 @@
 		</mat-form-field>
 		<button type="button" mat-flat-button color="primary" (click)="onLogin_Click()" [disabled]="formGroup.invalid">
 			LOGIN </button>
-		<button type="button" mat-button class="font-size-sm" color="primary" (click)="onRegister_Click()"> REGISTER NEW
+		<button type="button" mat-button class="font-size-sm" (click)="onRegister_Click()"> REGISTER NEW
 			ACCOUNT
 		</button>
-		<button type="button" mat-button class="font-size-sm" color="primary" (click)="onForgotPassword_Click()"> FORGOT
+		<button type="button" mat-button class="font-size-sm" (click)="onForgotPassword_Click()"> FORGOT
 			PASSWORD
 		</button>
 	</form>
