--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,5 +1,5 @@
 .horizontal-shake {
-    animation: horizontal-shaking 0.35s infinite;
+    animation: horizontal-shaking 0.35s 10ms;
 }
 
 @keyframes horizontal-shaking {
