--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -28,6 +28,9 @@
             </mat-nav-list>
         </mat-expansion-panel>
         <mat-nav-list dense>
+            <mat-list-item (click)="navTo('home')">
+                <span> Home </span>
+            </mat-list-item>
             <mat-list-item (click)="navTo('fleet-management')">
                 <span> Fleet Management </span>
             </mat-list-item>
