--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import '../assets/custom-theme-test.scss';
+
 .auth-container {
     width: 100%;
     height: 100%;
@@ -25,7 +27,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    border: 1px solid #c1c1c117;
+    border: 1px solid theme-color($my-app-theme, primary, 400) !important;
     padding: 16px;
     margin: 4px;
 }
@@ -35,5 +37,5 @@
 }
 
 .nobetween-info {
-    color: #c1c1c1;
+    color: theme-color($my-app-theme, primary, 100) !important;
 }
