--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -42,7 +42,7 @@
 			ACCOUNT
 		</button>
 
-		<button type="button" mat-flat-button color="warn" (click)="onBack_Click()">
+		<button type="button" mat-button class="font-size-sm" (click)="onBack_Click()">
 			GO BACK
 		</button>
 	</form>
