--- a/src/app/auth/reset/reset.component.html
+++ b/src/app/auth/reset/reset.component.html
@@ -8,7 +8,7 @@
             [disabled]="formGroup.invalid"> RESET
             PASSWORD
         </button>
-        <button type="button" mat-flat-button color="warn" (click)="onBack_Click()">
+        <button type="button" mat-button class="font-size-sm" (click)="onBack_Click()">
             GO BACK
         </button>
     </form>
