--- a/src/app/dashboard/couse-club-layout/courses/courses.component.html
+++ b/src/app/dashboard/couse-club-layout/courses/courses.component.html
@@ -15,7 +15,7 @@
                 SAVE
             </button>
 
-            <button type="button" mat-flat-button color="warn" (click)="onBack_Click()">
+            <button type="button" mat-button class="font-size-sm" (click)="onBack_Click()">
                 BACK TO GRID
             </button>
         </div>
@@ -25,8 +25,8 @@
     <table mat-table [dataSource]="dataSource" *ngIf="showGrid">
 
         <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef>
-                <button type="button" mat-button color="accent" (click)="onAdd_Click()"> ADD COURSE </button>
+            <th mat-header-cell *matHeaderCellDef class="action-column">
+                <button type="button" mat-flat-button color="primary" (click)="onAdd_Click()"> ADD COURSE </button>
             </th>
             <td mat-cell *matCellDef="let element">
                 <button type="button" mat-button color="error" (click)="onDelete_Click(element)"> DELETE </button>
@@ -34,7 +34,7 @@
         </ng-container>
 
         <ng-container matColumnDef="edit">
-            <th mat-header-cell *matHeaderCellDef> </th>
+            <th mat-header-cell *matHeaderCellDef class="action-column"> </th>
             <td mat-cell *matCellDef="let element">
                 <button type="button" mat-button color="accent" (click)="onEdit_Click(element)"> EDIT </button>
             </td>
