--- a/src/assets/custom-theme-test.scss
+++ b/src/assets/custom-theme-test.scss
@@ -2,7 +2,36 @@
 
 @include mat.core();
 
-$my-app-primary: mat.define-palette(mat.$indigo-palette); // inputs
+$my-primary-range: (
+    50 : #FFFFFF,
+    100 : #c1c1c1,
+    200 : #FFFFFF,
+    300 : #4472c4,
+    400 : #c1c1c117,
+    500 : #272f3c,
+    600 : #FFFFFF,
+    700 : #FFFFFF,
+    800 : #2f3b4e,
+    900 : #262626,
+    1000: #FFFFFF,
+    disabled: #2b2b2b,
+    contrast: (50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : black,
+        400 : #ffffff,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        1000 : #ffffff,
+        disabled: #ffffff61)
+);
+
+//$my-app-primary: mat.define-palette(mat.$blue-palette); // inputs
+
+$my-app-primary: mat.define-palette($my-primary-range); // inputs
 $my-app-accent: mat.define-palette(mat.$orange-palette); // buttons
 $my-app-warn: mat.define-palette(mat.$red-palette); // back/close/errors
 
