--- a/src/app/dashboard/couse-club-layout/courses/courses.component.html
+++ b/src/app/dashboard/couse-club-layout/courses/courses.component.html
@@ -1,5 +1,9 @@
 <div class="form-container">
     <form [formGroup]="formGroup" autocomplete="off" *ngIf="!showGrid">
+        <div class="dashboard-container">
+            <span class="dashboard-container-title"> CREATE NEW COURSE
+            </span>
+        </div>
         <div class="flex-container">
             <mat-form-field appearance="standard">
                 <mat-label>COURSE NAME</mat-label>
